# aw-server

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Dockerfile  MANIFEST.in  Makefile  Pipfile  README.md  TODO-uv-migration.md  __main__.py  aw-server.spec  build.sh  datastore.py  dev-requirements.txt  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql.yml  lint.yml
actwa/server/: datastore.py  server.py
aw/server/: __init__.py  api.py  datastore.py  main.py  server.py  storage_strategies.py
aw_server/: __about__.py  __init__.py  api.py  config.py  custom_static.py  custom_watcher_pages.py  exceptions.py  log.py  main.py  notifications.py  rest.py  server.py  settings.py  zeroknowledge.py
aw_server/resources/: rest.py
aw_server/static/: README.md
aw_server/task_tracker/: __init__.py  models.py  routes.py
aw_sync/: main.py
misc/: aw-server.service  process_logs.py
scripts/: benchmark-api-heartbeat.py  profile-werkzeug-read.py  profile-werkzeug.py
site/: index.html
tests/: conftest.py  test_client.py  test_datastore.py  test_server.py  tests.py
