[project]
name = "aw-server"
version = "0.13.2"
description = "Server for ActivityWatch"
authors = [
  {name = "Erik Bjäreholt", email = "erik@bjareho.lt"}
]
license = {text = "MPL-2.0"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "aw-core>=0.5.8,<0.6.0",
  "aw-client>=0.5.8,<0.6.0",
  "flask>=2.2,<3.0",
  "flask-restx>=1.0.3,<2.0",
  "flask-cors",
  "importlib-metadata; python_version < '3.10'",
  "werkzeug>=2.3.3,<3.0"
]

[project.scripts]
aw-server = "aw_server:main"

[project.optional-dependencies]
dev = [
  "mypy",
  "pytest>=7.3,<8.0",
  "pytest-flask",
  "pytest-benchmark",
  "pytest-cov",
  "types-Werkzeug",
  "types-setuptools",
  "types-Flask",
  "black>=23.3.0,<24.0"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-report=term --cov-report=xml --cov-report=html --cov=aw_server"
python_files = ["*.py",]

[tool.ruff]
ignore = ["E402", "E501"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
